# ps

./: CMakeLists.txt  StringBuilder.h  addNode.sh  checkTest.py  config.conf  constant.h  fork.sh  generateScript  generateScript.cpp  linuxMake.sh  log.h  main  main.cpp  message.h  newWorker  newWorker.cpp  node.h  pretreat.py  quickStart.sh  rmLog.sh  scheduler  scheduler.cpp  scheduler.h  scheduler9.txt  schedulerAddNodefork.sh  schedulerStopNodefork.sh  server  server.cpp  stopPS.sh  train.csv  train.txt  util.h  worker  worker.cpp
